--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
-    "nativescript-angular": "~8.20.0",
     "@nativescript/theme": "~2.2.1",
+    "nativescript-angular": "~8.20.0",
+    "nativescript-drop-down": "^5.0.4",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns-core-modules": "~6.3.0",
