--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~8.2.0",
     "@nativescript/theme": "~2.2.1",
     "nativescript-angular": "~8.20.0",
+    "nativescript-carousel": "^6.1.1",
     "nativescript-drop-down": "^5.0.4",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
