--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nativescript-angular": "~8.20.0",
     "nativescript-carousel": "^6.1.1",
     "nativescript-drop-down": "^5.0.4",
+    "nativescript-ui-chart": "^7.1.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns-core-modules": "~6.3.0",
